# tenbio

./: CLAUDE.md  README.md  TODO.md  metabolic-pathway-designer-architecture.md  start.sh
pathwaysfinder/: .gitignore  TODO.md  docker-compose.yml
pathwaysfinder/api/: Dockerfile  add_more_parts.py  alembic.ini  pyproject.toml  requirements.txt  seed_data.py  seed_pathways.py
pathwaysfinder/api/alembic/: env.py
pathwaysfinder/api/alembic/versions/: 0001_add_pathways.py
pathwaysfinder/api/app/: database.py  main.py
pathwaysfinder/api/app/external_apis/: igem.py  kegg.py  llm_client.py  pubmed.py  uniprot.py
pathwaysfinder/api/app/models/: parts.py  pathway.py  prediction_job.py
pathwaysfinder/api/app/routes/: design.py  export.py  igem.py  kegg.py  optimize.py  parts.py  pathway.py  primers.py  sequencing.py  simulate.py  structure.py  uniprot.py
pathwaysfinder/api/app/schemas/: design.py  fba.py  parts.py  pathway.py  primer.py  structure.py
pathwaysfinder/api/app/services/: codon_optimizer.py  fba.py  goal_grounding.py  pathway_export.py  pathway_search.py  primer_design.py  sbol3_export.py  sequencing.py
pathwaysfinder/api/tests/: conftest.py  test_design_routes.py  test_fba.py  test_kegg_fallback.py  test_optimize.py  test_parts.py  test_sbol3_export.py  test_sequencing.py  test_structure_persistence.py
pathwaysfinder/docs/: llm-service-plan.md
pathwaysfinder/esm-service/app/: main.py  schemas.py
pathwaysfinder/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
pathwaysfinder/protenix-service/: Dockerfile
(+55 files in other folders)
