[project]
name = "pathwaysfinder-api"
version = "0.2.0"
description = "API for genetic parts and metabolic pathway design"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
    "biopython==1.83",
    "sbol3>=1.1",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
